--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
         "slim/slim": "^2.6",
-        "entomb/slim-json-api": "dev-master"
+        "entomb/slim-json-api": "dev-master",
+        "palanik/corsslim": "^1.0"
     }
 }
